# shapechangeable-computer

./: .gitignore  .gitmodules  :  Cargo.toml  README.md  cfg.toml.sample  generate.zsh  partitions.csv  rust-toolchain.toml
.cargo/: config.toml  config.toml.org
applications/: Cargo.toml
applications/src/: lib.rs  manager.rs
debug/: Cargo.toml  write_efuse_generater.bash
debug/asset/: test_1_0.raw
debug/examples/: st7735_display.rs  wrapper_display.rs
debug/src/: efuse.rs
examples/: display.rs  efuse.rs  estimate_coordinate.rs  packet.rs  read_efuse.rs  read_efuse_2.rs  st7735_display.rs  uartex.rs  uartflush.rs  uartoverflow.rs
global-network/: Cargo.toml
global-network/src/: lib.rs
network-node/: Cargo.toml
network-node/src/: flit.rs  header.rs  lib.rs  localnet.rs  packet.rs  protocol.rs  serial.rs  system.rs  utils.rs
network-node/src/network/: mod.rs  packet.rs
ota/: Cargo.toml  build.rs  flash_retry.bash  partitions.csv
ota/.cargo/: config.toml
ota/examples/: ota_sample.rs  raw_ota.rs  simple_ota.rs
ota/src/: lib.rs  ota.rs
shapechangeable-display/: Cargo.toml  README.md  flash_retry.bash  generate.zsh  history_mac_address.txt  rust-toolchain.toml  write_efuse_generater.bash
shapechangeable-display/.cargo/: config.toml
shapechangeable-display/asset/: test_0_1.raw  test_0_2.raw  test_0_3.raw  test_1_0.raw  test_1_1.raw  test_1_2.raw  test_1_3.raw  test_2_0.raw  test_2_1.raw  (+20 more)
src/: display.rs  efuse.rs  font.rs  id_utils.rs  lib.rs  localnet.rs  main.rs  network.rs  packet.rs  serial.rs
template/: write_efuse_template.rs
(+49 files in other folders)
